@@ -1,3 +1,8 @@
+2007-02-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>
+
+	Add OpenHRP SDK detection.
+	* urbi-with-openhrp.m4: Add macro. New.
+
 2007-02-15  Akim Demaille  <akim@lrde.epita.fr>
 
 	Fix xpass handling
